2006-10-12  Graham Percival  <gpermus@gmail.com>

	* doc/marsyas.texi: begin splitting into individual chapter files.

	* doc/ {intro, install}.texi: chapters split from marsyas.texi

2006-06-29  George Tzanetakis  <gtzan@orfeas.cs.UVic.CA>

	* src/record.cpp (main): Add record_orcalab for multiple soundfile recording from 4 simultaneous playing tapes 

	* marsyas/Parallel.cpp (update): Problems with default control updating of Composites (not fixed just explored)

	* marsyas/MarSystemManager.cpp: Added Parallel to MarSystemManager

	* marsyas/AudioSource.cpp (process): Added support for multichannel audio 

2006-06-28  George Tzanetakis  <gtzan@orfeas.cs.UVic.CA>

	* src/record.cpp: added sampling rate option

2006-05-07    <gtzan@localhost>

	* marsyas (update): full redesign of logging infrastructure,
	MrsLog.h - fixed various bugs related to state in classifyFile 
	    

2006-01-13    <gtzan@localhost>

	* marsyas/SOM.cpp: New Self-Organizing Map Marsystem 

	* src/tutorial.cpp: added test for self organizing map and 
	collection advancing 

2005-11-09    <gtzan@epikouros.cs.uvic.ca>

	* src/phasevocoder.cpp (printUsage): cleanup and documenation of
	commandline options 

2005-10-23    <gtzan@epikouros.cs.uvic.ca>

	* src/Makefile.am (sfplay_LDADD): changed simplesfplay to tutorial

2005-10-19    <gtzan@epikouros.cs.uvic.ca>

	* marsyas/Makefile.am (libmarsyas_a_SOURCES): added Switcher and MemorySource

2005-10-16    <gtzan@epikouros.cs.uvic.ca>

	* src/midiTest.cpp (main): cleanup add commandline options

2005-07-06    <gtzan@epikouros.cs.uvic.ca>

	* marsyas/NormMaxMin.cpp: added this MarSystem for normalization

2005-06-26    <gtzan@epikouros.cs.uvic.ca>

	* marsyas/PlotSink.cpp (process): added option for sequence of
	plots with counter

2005-06-11    <gtzan@epikouros.cs.uvic.ca>

	* marsyas/AuFileSource.cpp (addControls): fixed bug with rewind/update

	* marsyas/WavFileSource.cpp (update): fixed bug with rewind/update
