@@ -35,15 +35,17 @@ MFCC::MFCC(string name):MarSystem("MFCC",name)
   //type_ = "MFCC";
   //name_ = name;
   
-	pfftSize_ = 0;
+  pfftSize_ = 2;
   psamplingRate_ = 0;
-  mfcc_offsets = NULL;
+  mfcc_offsets_ = NULL;
 }
 
 
 MFCC::~MFCC()
 {
-    if (mfcc_offsets!=NULL) free(mfcc_offsets);
+  if (mfcc_offsets_!=NULL) 
+    delete [] mfcc_offsets_;
+  
 }
 
 
@@ -52,6 +54,19 @@ MFCC::clone() const
 {
   return new MFCC(*this);
 }
+
+
+
+MFCC::MFCC(const MFCC& a):MarSystem(a)
+{
+  pfftSize_ = 2;
+  psamplingRate_ = 0;
+  mfcc_offsets_ = NULL;
+}
+
+
+
+
 
 
 void
@@ -63,115 +78,119 @@ MFCC::localUpdate()
   setctrl("mrs_natural/onSamples", (mrs_natural)1);
   setctrl("mrs_natural/onObservations", (mrs_natural)13);
   setctrl("mrs_real/osrate", getctrl("mrs_real/israte"));
-
+  
   // Initialize frequency boundaries for filters 
 
   mrs_natural i,j;
-
+  
   fftSize_ = 2 * getctrl("mrs_natural/inObservations").toNatural();
   samplingRate_ = (mrs_natural) (getctrl("mrs_real/israte").toReal() * getctrl("mrs_natural/inObservations").toNatural() * 2);
- 
-  if ((pfftSize_ != fftSize_) || (psamplingRate_ != samplingRate_))
-  {
-    
-    cepstralCoefs_ = 13;
-    ostringstream oss;
-    
-    for (i=0; i < cepstralCoefs_; i++)
-			oss << "MFCC_" << i << ",";
-    setctrl("mrs_string/onObsNames", oss.str());
-    
-    freqs_.create(42);
-    lowestFrequency_ = 133.3333f;
-    linearFilters_ = 13;
-    linearSpacing_ = 66.66666f;
-    logFilters_ = 27;
-    logSpacing_ = 1.0711703f;
-    
-    totalFilters_ = linearFilters_ + logFilters_;
-    lower_.create(totalFilters_);
-    center_.create(totalFilters_);
-    upper_.create(totalFilters_);
-    triangle_heights_.create(totalFilters_);
-
-    // Linear filter boundaries
-    for (i=0; i< linearFilters_; i++)
-			freqs_(i) = lowestFrequency_ + i * linearSpacing_;
-    
-    // Logarithmic filter boundaries  
-    float first_log = freqs_(linearFilters_-1);
-    for (i=1; i<=logFilters_+2; i++)
-		{
-			freqs_(linearFilters_-1+i) = first_log * pow(logSpacing_, (mrs_real)i);
-		}  
-          
-    // Triangles information
-    for (i=0; i<totalFilters_; i++)
-			lower_(i) = freqs_(i);
-    
-    for (i=1; i<= totalFilters_; i++)
-			center_(i-1) = freqs_(i);
-    
-    for (i=2; i<= totalFilters_+1; i++)
-			upper_(i-2) = freqs_(i);
-    
-    for (i=0; i<totalFilters_; i++)
-			triangle_heights_(i) = (mrs_real)(2.0 / (upper_(i) - lower_(i)));
-    
-    fftFreqs_.stretch(fftSize_);
-    cepstralCoefs_ = 13;
-    
-    for (i=0; i< fftSize_; i++)
-			fftFreqs_(i) = (float)i / (float)fftSize_ * (float)samplingRate_;
-    
-    mfccFilterWeights_.create(totalFilters_, fftSize_);
-    mfccDCT_.create(cepstralCoefs_, totalFilters_);
-    
-    mrs_natural chan;
-    
-    // NEIL's filter weight speedup
-    if (pfftSize_!=fftSize_) {
-        if (mfcc_offsets!=NULL) free(mfcc_offsets);
-        mfcc_offsets = (int*)malloc(sizeof(int)*(totalFilters_*fftSize_*2));
-    }
-    // Initialize mfccFilterWeights
-    for (chan = 0; chan < totalFilters_; chan++) {
-        // NEIL's filter weight speedup
-        int len=0; int pos=0;
-        for (i=0; i< fftSize_; i++)
-        {
-            if ((fftFreqs_(i) > lower_(chan))&& (fftFreqs_(i) <= center_(chan)))
-            {
-                mfccFilterWeights_(chan, i) = triangle_heights_(chan) *
-                    ((fftFreqs_(i) - lower_(chan))/(center_(chan) - lower_(chan)));
-                // NEIL's filter weight speedup
-                if (len==-1) { pos=i; } len=i;
-            }
-            if ((fftFreqs_(i) > center_(chan)) && (fftFreqs_(i) <= upper_(chan)))
-            {
-                mfccFilterWeights_(chan, i) = triangle_heights_(chan) *
-                    ((upper_(chan) - fftFreqs_(i))/(upper_(chan) - center_(chan)));
-                // NEIL's filter weight speedup
-                if (len==-1) { pos=i; } len=i;
-            }
-        }
-        // NEIL's filter weight speedup
-        mfcc_offsets[chan] = pos;
-        mfcc_offsets[chan+totalFilters_] = len;
-    }
-    
-    // Initialize MFCC_DCT
-    mrs_real scale_fac = (mrs_real)(1.0/ sqrt((mrs_real)(totalFilters_/2)));
-    for (j = 0; j<cepstralCoefs_; j++)
-			for (i=0; i< totalFilters_; i++)
-				{
-					mfccDCT_(j, i) = scale_fac * cos(j * (2*i +1) * PI/2/totalFilters_);
-					if (i == 0)
-						mfccDCT_(j,i) *= (mrs_real)(sqrt(2.0)/2.0);
-				}  
-  }
   
-	pfftSize_ = fftSize_;
+  if ((pfftSize_ != fftSize_) || (psamplingRate_ != samplingRate_))
+    {
+      
+      cepstralCoefs_ = 13;
+      ostringstream oss;
+      
+      for (i=0; i < cepstralCoefs_; i++)
+	oss << "MFCC_" << i << ",";
+      setctrl("mrs_string/onObsNames", oss.str());
+      
+      freqs_.create(42);
+      lowestFrequency_ = 133.3333f;
+      linearFilters_ = 13;
+      linearSpacing_ = 66.66666f;
+      logFilters_ = 27;
+      logSpacing_ = 1.0711703f;
+      
+      totalFilters_ = linearFilters_ + logFilters_;
+      lower_.create(totalFilters_);
+      center_.create(totalFilters_);
+      upper_.create(totalFilters_);
+      triangle_heights_.create(totalFilters_);
+      
+      // Linear filter boundaries
+      for (i=0; i< linearFilters_; i++)
+	freqs_(i) = lowestFrequency_ + i * linearSpacing_;
+      
+      // Logarithmic filter boundaries  
+      float first_log = freqs_(linearFilters_-1);
+      for (i=1; i<=logFilters_+2; i++)
+	{
+	  freqs_(linearFilters_-1+i) = first_log * pow(logSpacing_, (mrs_real)i);
+	}  
+      
+      // Triangles information
+      for (i=0; i<totalFilters_; i++)
+	lower_(i) = freqs_(i);
+      
+      for (i=1; i<= totalFilters_; i++)
+	center_(i-1) = freqs_(i);
+      
+      for (i=2; i<= totalFilters_+1; i++)
+	upper_(i-2) = freqs_(i);
+      
+      for (i=0; i<totalFilters_; i++)
+	triangle_heights_(i) = (mrs_real)(2.0 / (upper_(i) - lower_(i)));
+      
+      fftFreqs_.stretch(fftSize_);
+      cepstralCoefs_ = 13;
+      
+      for (i=0; i< fftSize_; i++)
+	fftFreqs_(i) = (float)i / (float)fftSize_ * (float)samplingRate_;
+      
+      mfccFilterWeights_.create(totalFilters_, fftSize_);
+      mfccDCT_.create(cepstralCoefs_, totalFilters_);
+      
+      mrs_natural chan;
+      
+      // NEIL's filter weight speedup
+      if (pfftSize_!=fftSize_) {
+	if (mfcc_offsets_!=NULL) 
+	  delete [] mfcc_offsets_;
+	
+	mfcc_offsets_ = new int[(totalFilters_*fftSize_*2)];
+	
+	
+	// Initialize mfccFilterWeights
+	for (chan = 0; chan < totalFilters_; chan++) {
+	  // NEIL's filter weight speedup
+	  int len=0; int pos=0;
+	  for (i=0; i< fftSize_; i++)
+	    {
+	      if ((fftFreqs_(i) > lower_(chan))&& (fftFreqs_(i) <= center_(chan)))
+		{
+		  mfccFilterWeights_(chan, i) = triangle_heights_(chan) *
+		    ((fftFreqs_(i) - lower_(chan))/(center_(chan) - lower_(chan)));
+		  // NEIL's filter weight speedup
+		  if (len==-1) { pos=i; } len=i;
+		}
+	      if ((fftFreqs_(i) > center_(chan)) && (fftFreqs_(i) <= upper_(chan)))
+		{
+		  mfccFilterWeights_(chan, i) = triangle_heights_(chan) *
+		    ((upper_(chan) - fftFreqs_(i))/(upper_(chan) - center_(chan)));
+		  // NEIL's filter weight speedup
+		  if (len==-1) { pos=i; } len=i;
+		}
+	    }
+	  // NEIL's filter weight speedup
+	  mfcc_offsets_[chan] = pos;
+	  mfcc_offsets_[chan+totalFilters_] = len;
+	}
+	
+	// Initialize MFCC_DCT
+	mrs_real scale_fac = (mrs_real)(1.0/ sqrt((mrs_real)(totalFilters_/2)));
+	for (j = 0; j<cepstralCoefs_; j++)
+	  for (i=0; i< totalFilters_; i++)
+	    {
+	      mfccDCT_(j, i) = scale_fac * cos(j * (2*i +1) * PI/2/totalFilters_);
+	      if (i == 0)
+		mfccDCT_(j,i) *= (mrs_real)(sqrt(2.0)/2.0);
+	    }  
+      }
+    }
+  
+  pfftSize_ = fftSize_;
   psamplingRate_ = samplingRate_;
   
   mrs_natural inSize = getctrl("mrs_natural/inObservations").toNatural();  
@@ -201,7 +220,7 @@ MFCC::process(realvec& in, realvec& out)
   for (i=0; i<totalFilters_; i++) {
       sum = 0.0;
       // NEIL's filter weight speedup
-      for (k=mfcc_offsets[i]; k<=mfcc_offsets[i+totalFilters_]; k++) {
+      for (k=mfcc_offsets_[i]; k<=mfcc_offsets_[i+totalFilters_]; k++) {
           sum += (mfccFilterWeights_(i, k) * fmagnitude_(k));
       }
       if (sum != 0.0)
